<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/screenBackground"
      >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/toolbarBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_action_back"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/app_toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_search_businesses"
            />

      </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scoller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        >

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="@dimen/padding_extra_large"
          >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            style="@style/app_screen_content_text.regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lbl_search_businesses_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            style="@style/app_screen_content_header.regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/lbl_search_businesses_term"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView4"
            style="@style/app_screen_content.small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:text="@string/lbl_search_businesses_term_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTerm"
            style="@style/app_screen_content_input.regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/shape_input_background"
            android:hint="@string/lbl_search_businesses_term_hint"
            android:minHeight="?actionBarSize"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView5"
            style="@style/app_screen_content_header.regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/lbl_search_businesses_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTerm"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView6"
            style="@style/app_screen_content.small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:text="@string/lbl_search_businesses_location_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLocation"
            style="@style/app_screen_content_input.regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/shape_input_background"
            android:hint="@string/lbl_search_businesses_location_hint"
            android:minHeight="?actionBarSize"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView6"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView7"
            style="@style/app_screen_content_header.regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/lbl_search_businesses_categories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLocation"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView8"
            style="@style/app_screen_content.small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:text="@string/lbl_search_businesses_categories_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView7"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCategories"
            style="@style/app_screen_content_input.regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/shape_input_background"
            android:hint="@string/lbl_search_businesses_categories_hint"
            android:minHeight="?actionBarSize"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView8"
            />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:text="@string/lbl_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnApply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnApply"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:text="@string/lbl_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>