<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/toolbarBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_action_back"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/app_toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_business_details"
            />

      </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/screenBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        >

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <com.yelpbusiness.android.view.ImageSliderView
            android:id="@+id/viewImageSlider"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_collapseMode="parallax"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewImageSlider"
            android:visibility="gone"
            tools:visibility="visible">

          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/tvBusinessName"
              style="@style/app_screen_header_text_large.nopadding"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="start|center_vertical"
              android:layout_margin="@dimen/margin_medium"
              android:textColor="@color/textColorPrimary"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              tools:text="Starbucks"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/tvRateValue"
              style="@style/app_screen_content.regular"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/margin_extra_small"
              android:textSize="@dimen/font_size_12sp"
              app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
              app:layout_constraintStart_toEndOf="@+id/ratingBar"
              app:layout_constraintTop_toTopOf="@+id/ratingBar"
              tools:text="2.0"
              />

          <me.zhanghai.android.materialratingbar.MaterialRatingBar
              android:id="@+id/ratingBar"
              android:layout_width="wrap_content"
              android:layout_height="14dp"
              android:layout_gravity="center_horizontal"
              android:layout_marginTop="@dimen/margin_small"
              android:isIndicator="true"
              android:rating="2.0"
              app:layout_constraintStart_toStartOf="@+id/tvBusinessName"
              app:layout_constraintTop_toBottomOf="@+id/tvBusinessName"
              app:mrb_fillBackgroundStars="true"
              app:mrb_progressBackgroundTint="@color/secondGrey"
              app:mrb_progressTint="@color/ratingColor"
              />

          <com.google.android.material.chip.ChipGroup
              android:id="@+id/chipCategories"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_small"
              android:paddingStart="@dimen/padding_medium"
              android:paddingEnd="@dimen/padding_medium"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/ratingBar"
              />

          <androidx.appcompat.widget.AppCompatImageView
              android:id="@+id/appCompatImageView2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_small"
              app:layout_constraintStart_toStartOf="@+id/ratingBar"
              app:layout_constraintTop_toBottomOf="@+id/chipCategories"
              app:srcCompat="@drawable/ic_address_location"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/tvAddress"
              style="@style/app_screen_content.regular"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/margin_extra_small"
              android:layout_marginEnd="@dimen/margin_medium"
              android:layout_marginTop="@dimen/margin_extra_small"
              android:textSize="@dimen/font_size_14sp"
              tools:maxLines="4"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@+id/appCompatImageView2"
              app:layout_constraintTop_toTopOf="@+id/appCompatImageView2"
              tools:text="@tools:sample/lorem/random"
              />


          <androidx.appcompat.widget.AppCompatImageView
              android:id="@+id/appCompatImageView3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_medium"
              app:layout_constraintStart_toStartOf="@+id/ratingBar"
              app:layout_constraintTop_toBottomOf="@+id/tvAddress"
              app:srcCompat="@drawable/ic_phone"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/tvPhone"
              style="@style/app_screen_content.regular"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/margin_extra_small"
              android:layout_marginEnd="@dimen/margin_medium"
              android:textSize="@dimen/font_size_14sp"
              app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView3"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@+id/appCompatImageView3"
              app:layout_constraintTop_toTopOf="@+id/appCompatImageView3"
              tools:maxLines="4"
              tools:text="@tools:sample/us_phones"
              />

          <androidx.appcompat.widget.AppCompatImageView
              android:id="@+id/appCompatImageView4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_medium"
              app:layout_constraintStart_toStartOf="@+id/ratingBar"
              app:layout_constraintTop_toBottomOf="@+id/tvPhone"
              app:srcCompat="@drawable/ic_calendar"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/tvHours"
              style="@style/app_screen_content.regular"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/margin_extra_small"
              android:layout_marginEnd="@dimen/margin_medium"
              android:textSize="@dimen/font_size_14sp"
              app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView4"
              app:layout_constraintStart_toEndOf="@+id/appCompatImageView4"
              app:layout_constraintTop_toTopOf="@+id/appCompatImageView4"
              android:text="@string/lbl_open_hours"
              />

          <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/tvOpen"
              style="@style/app_screen_content.regular"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginEnd="@dimen/margin_medium"
              android:layout_marginStart="@dimen/margin_small"
              android:text="@string/lbl_open_now"
              android:textColor="@color/activeGreen"
              android:textSize="@dimen/font_size_14sp"
              app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView4"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@+id/tvHours"
              app:layout_constraintTop_toTopOf="@+id/appCompatImageView4"
              />


          <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/rvSchedule"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:clipToPadding="false"
              android:padding="@dimen/padding_medium"
              app:layout_constraintTop_toBottomOf="@+id/tvHours"
              />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spinKit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:SpinKit_Color="@color/textColorPrimary"
            android:layout_marginTop="@dimen/margin_extra_large"
            app:SpinKit_Style="ThreeBounce"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewImageSlider"
            />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>